--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
     schedule:
       interval: "weekly"
 registries:
-  graphql-pro-and-enterprise:
+  graphql-pro:
     type: rubygems-server
     url: https://gems.graphql.pro
     username: ${{secrets.GRAPHQL_PRO_USERNAME}}
